# parse-size

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
src/: lib.rs
